<resources>
    <string name="app_name">PolitiTrak</string>
    <string name="bill_button">Bill Data</string>
    <string name="members_button">Members of Congress</string>
    <string name="committee_button">Committee Data</string>
    <string name="nominations_button">Nomination Data</string>
    <string name="floor_actions_button">Floor Actions</string>
    <string name="local_bills_tab">Local</string>
    <string name="national_bills_tab">National</string>
    <string name="Share">Share</string>
</resources>
