<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="8dp"
    android:layout_marginLeft="8dp"
    android:layout_marginEnd="8dp"
    android:layout_marginRight="8dp"
    tools:context="com.myroom.wesna.polititrak.MainActivity">

    <Button
        android:id="@+id/bill_button"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:text="@string/bill_button"
        android:drawableLeft="@drawable/bill_img_32"
        android:drawableStart="@drawable/bill_img_32"
        android:drawablePadding="8dp"
        android:gravity="start|center_vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        style="?android:attr/borderlessButtonStyle"/>

    <View
        android:layout_width="368dp"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        android:id="@+id/divider1"
        app:layout_constraintTop_toBottomOf="@+id/bill_button"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <Button
        android:id="@+id/members_button"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:text="@string/members_button"
        style="?android:attr/borderlessButtonStyle"
        android:gravity="start|center_vertical"
        android:drawableLeft="@drawable/members_32"
        android:drawableStart="@drawable/members_32"
        android:drawablePadding="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider1"/>

    <View
        android:layout_width="368dp"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        android:id="@+id/divider2"
        app:layout_constraintTop_toBottomOf="@+id/members_button"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <Button
        android:id="@+id/committee_button"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:text="@string/committee_button"
        android:drawableLeft="@drawable/committee_32"
        android:drawableStart="@drawable/committee_32"
        android:drawablePadding="8dp"
        android:gravity="start|center_vertical"
        style="?android:attr/borderlessButtonStyle"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider2"/>

    <View
        android:id="@+id/divider3"
        android:layout_width="368dp"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/committee_button"/>

    <Button
        android:id="@+id/nominations_button"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:text="@string/nominations_button"
        android:drawableLeft="@drawable/nomination_32"
        android:drawableStart="@drawable/nomination_32"
        android:drawablePadding="8dp"
        android:gravity="start|center_vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider3"
        style="?android:attr/borderlessButtonStyle"/>

    <View
        android:id="@+id/divider4"
        android:layout_width="368dp"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nominations_button"/>

    <Button
        android:id="@+id/floor_actions_button"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:text="@string/floor_actions_button"
        android:drawableLeft="@drawable/floor_actions_32"
        android:drawableStart="@drawable/floor_actions_32"
        android:drawablePadding="8dp"
        android:gravity="start|center_vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider4"
        style="?android:attr/borderlessButtonStyle"/>


</android.support.constraint.ConstraintLayout>
